# Personal-programming-exercises

./: .gitignore  README.md
Asssembly/Combining Assembly Code with C Programs/: README.rst
Asssembly/Combining Assembly Code with C Programs/Example/: CMakeLists.txt
Asssembly/Combining Assembly Code with C Programs/Program Example/: CMakeLists.txt  c_with_assembly_code.c  fix_assembly.s
cpp/ACCU/: README.md
cpp/ACCU/2021-07-HomeWork5-count-word/: README.md  data_131the.txt  my_solution.cpp
cpp/C++ Primer Plus/: CMakeLists.txt  chapter10.cpp
python/: classsuper.py
